fix: fix contrast ratio

--- a/src/components/my-button/my-button.scss
+++ b/src/components/my-button/my-button.scss
@@ -6,7 +6,7 @@
 
 .button {
   &.primary {
-    color: green;
+    color: black;
   }
 
   &.secondary {
